--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,18 @@
 @SpringBootApplication(exclude={DataSourceAutoConfiguration.class})
 spring.datasource.driver-class-name = com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://LAPTOP-HFKVK5H:1433;databaseName=SmartParking;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://34.124.144.5;databaseName=convenientparking;encrypt=true;trustServerCertificate=true;
 
-spring.datasource.username = sa
-spring.datasource.password = ad
+
+spring.datasource.username = sqlserver
+spring.datasource.password = 123456
+
+
+# Cloud SQL starter automatically configures the JDBC URL
+
+# Configure username/password
+
+# Configure connection pooling if needed
+spring.datasource.hikari.maximum-pool-size=10
 
 spring.datasource.dbcp2.test-while-idle= true
 spring.datasource.dbcp2.validation-query= SELECT 1
