--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class-name = com.microsoft.sqlserver.jdbc.SQLServerDriv
 #spring.datasource.username = sqlserver
 #spring.datasource.password = 123456
 
-spring.datasource.url=jdbc:sqlserver://LAPTOP-HFKVK5k;databaseName=SmartParking;encrypt=true;trustServerCertificate=true;username=sa;password=ad
+spring.datasource.url=jdbc:sqlserver://LAPTOP-HFKVK5H;databaseName=SmartParking;encrypt=true;trustServerCertificate=true;username=sa;password=ad
 
 # Configure connection pooling if needed
 spring.datasource.hikari.maximum-pool-size=10
