--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dia
 
 server.servlet.session.cookie.http-only= true
 server.servlet.session.tracking-modes=cookie
+
+allowed.origin = http://localhost:3000
