--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,13 @@ spring.jpa.show-sql= true
 spring.jpa.hibernate.ddl-auto=update
 #create, create-drop, none, validate
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port= 587
+spring.mail.username=smtp.convenientparking@gmail.com
+spring.mail.password=yhoalvhsfgkjsyak
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable = true
+
 spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
 
