--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,18 @@ spring.mail.properties.mail.smtp.starttls.enable = true
 spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
 
+# Cấu hình isolation level
+spring.datasource.tomcat.defaultAutoCommit=false
+spring.datasource.tomcat.validationQuery=SELECT 1
+
+# Timeout cho giao dịch (theo mili giây)
+spring.transaction.timeout=30000
+
+# Cấu hình propagation behavior
+spring.jpa.properties.hibernate.transaction.flush_before_completion=true
+
 server.servlet.session.cookie.http-only= true
 server.servlet.session.tracking-modes=cookie
 
+proxy-target-class= = true 
 allowed.origin = http://localhost:3000
