--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,5 +36,6 @@ spring.jpa.properties.hibernate.transaction.flush_before_completion=true
 server.servlet.session.cookie.http-only= true
 server.servlet.session.tracking-modes=cookie
 
+aws.region=AP_SOUTHEAST_2
 proxy-target-class= = true 
 allowed.origin = http://localhost:3000
