--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,4 +38,4 @@ server.servlet.session.tracking-modes=cookie
 
 aws.region=AP_SOUTHEAST_2
 proxy-target-class= = true
-allowed.origin = http://localhost:3000
+allowed.origin = https://a116-58-187-140-67.ngrok-free.app
