search parking lot of a merchant

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,4 +38,4 @@ server.servlet.session.tracking-modes=cookie
 
 aws.region=AP_SOUTHEAST_2
 proxy-target-class= = true
-allowed.origin = https://a116-58-187-140-67.ngrok-free.app
+allowed.origin = https://71a5-2001-ee0-4f85-4490-5882-1601-6512-e828.ngrok-free.app
