--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,4 +38,4 @@ server.servlet.session.tracking-modes=cookie
 
 aws.region=AP_SOUTHEAST_2
 proxy-target-class= = true
-allowed.origin = https://1bce-2001-ee0-4f85-4490-9576-bbe8-1e78-fbbc.ngrok-free.app
+allowed.origin = http://localhost:3000
