--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,14 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+
+		<!--	<dependency>
+			<groupId>com.github.deeppplab</groupId>
+			<artifactId>deepforest</artifactId>
+			<version>0.6</version>
+		</dependency>-->
+
+	
 	</dependencies>
 
 	<build>
