update naming api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-@SpringBootApplication(exclude={DataSourceAutoConfiguration.class})
+#@SpringBootApplication(exclude={DataSourceAutoConfiguration.class})
 
 spring.datasource.driver-class-name = com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://LAPTOP-HFKVK5H;databaseName=SmartParking;encrypt=true;trustServerCertificate=true;username=sa;password=ad
+spring.datasource.url=jdbc:sqlserver://LAPTOP-HFKVK5H;databaseName=smartparking;encrypt=true;trustServerCertificate=true;username=sa;password=ad
 
 # Configure connection pooling if needed
 spring.datasource.hikari.maximum-pool-size=10
@@ -38,4 +38,5 @@ server.servlet.session.tracking-modes=cookie
 
 aws.region=AP_SOUTHEAST_2
 proxy-target-class= = true
-allowed.origin = http://192.168.1.15:3000
+#allowed.origin = http://192.168.95.46:3000
+allowed.origin = http://localhost:3000
